@@ -57,6 +57,7 @@ Template for new versions:
 
 ## Fixes
 - `stockpiles`: fix one-off error in item type when importing furniture stockpile settings
+- `dig-now`: fix cases where boulders/rough gems of incorrect material were being generated when digging through walls
 
 ## Misc Improvements
 - `spectate`: show dwarves' activities (like prayer)
